<resources>
    <string name="app_name">Projet_TPE\n </string>
    <string name="menu"> <b>Est-il possible de ralentir le vieillissement de notre peau ?</b>\n </string>
    <string name="menuButtonIntro"> Pour commencer\n </string>
    <string name="menuButtonOld">  Vieillissement\n </string>
    <string name="menuButtonCredit"> A propos\n </string>
    <string name="menuButtonConclusion">  Pour finir\n </string>
    <string name="credit"> Projet_TPE\n </string>
    <string name="title_activity_introduction"> \n introductionActivity\n </string>
    <string name="retour_button"> Retour\n </string>
    <string name="titre_onglet_1"> 20 ans\n </string>
    <string name="titre_onglet_2">  50 ans sans soin\n </string>
    <string name="titre_onglet_3"> 50 ans avec soins\n </string>
    <string name="xp1buttonS"> experience 1\n </string>
    <string name="xp2buttonS">  experience 2\n </string>
    <string name="textdev1_1"><font size="20">  <b>  <u>  I-Le vieillissement de la peau </u> </b> </font> \n\n\n
     La peau est composée en moyenne de : \n
     -70% d’eau, \n
     -27.5% de protéines, \n
     -2% de matière grasse,\n 
     -0.5% de sel minéraux et d’oligo-éléments (éléments minéraux indispensables)\n\n
Elle est constituée de trois couches : \n
-sa couche superficielle : l’épiderme, \n
-sa couche intermédiaire : le derme \n
-sa couche profonde : l’hypoderme. \n </string>
    <string name="textdev1_2">
\n La peau est considérée comme un organe car elle remplit plusieurs fonctions importantes. Elle joue différents rôles fondamentaux comme la protection vis-à-vis de l\'extérieur (chocs, pollution, microbes, ultraviolets…), la régulation thermique, la synthèse hormonale (vitamine D, et différentes hormones). D’autre part, la peau a une fonction immunitaire, elle protège notre organisme, elle a aussi une fonction psychosociale, et elle joue sur notre apparence vis à vis des autres.\n
Comme toute autre partie du corps, elle est composée de cellules. Ces cellules se renouvellent constamment par cycle de 28 jours. Au fur et à mesure du vieillissement de la peau, la durée du cycle se rallonge, passant à 30 jours ou plus. De ce fait, de vieilles cellules s’accumulent, donnant un aspect de peau sèche, qui prononce les rides. \n\n

De plus, des découvertes ont montré que le <b>rétrécissement des télomères</b> est associés au vieillissement cellulaire. Ces structures sont de courtes séquences d’ADN placées à l’extrémité des chromosomes dans les cellules eucaryotes pour empêcher les chromosomes de se dégrader. On peut également ajouter que les télomères ont besoin d’une enzyme :  <b>la télomérase</b> (elle permet l’élongation et la conservation de la taille des télomères). Mais lorsqu’elle n’est pas présente les télomères deviennent plus courts ce qui conduit à la mort de la cellule et à l\'arrêt des divisions cellulaires provoquant ainsi <b>le vieillissement. </b>
\n </string>
    <string name="textdev2_1"> <font size="20">  <b> <u> II-Les facteurs à l\'origine du vieillissement </u>  </b> </font> \n\n\n
     Plusieurs facteurs peuvent accélérer le raccourcissement des télomères et donc accélérer le vieillissement de la peau. Une pharmacienne, de la pharmacie du Mortard à Lure, passionnée de dermato cosmétique a bien voulu répondre à plusieurs de nos questions comme : “Qu’est ce qui accélère le vieillissement de la peau ?” \n
Elle répondit : <i>“Alors ce qui accélère c’est déjà les conditions climatiques. Par exemple aujourd’hui il fait pas beau, il neige, il fait froid donc la peau est agressée. Souvent ça se voit, ça tiraille et ça rougit. Il y a aussi les habitudes de chacun, les habitudes alimentaires quand on mange pas équilibré, quand on fume, quand on boit de l’alcool ça se ressent aussi sur la qualité de la peau qui vieillit du coup prématurément.”</i>\n\n

Nous allons donc vous présenter quelques facteurs qui peuvent accélérer le vieillissement de la peau:\n\n

Tout d’abord, grâce à une expérience montrant l’impact des rayons UV, on sait que c’est un des principaux facteurs du vieillissement de la peau. Cet agent mutagène attaque les cellules mélanocytes (en brisant leur chaîne d’ADN) qui se trouvent au niveau de la couche basale de l’épiderme. Ces cellules synthétisent la mélanine responsable de la pigmentation de la peau et ayant pour but de protéger la peau. Ainsi, elles produisent moins de mélanine, de protéine (collagène et élastine) ce qui accentue le processus du vieillissement.\n
        Les UV (rayons ultraviolets) sont composées de rayonnements électromagnétiques. Ils ont une longueur d’onde plus courte que celle du visible et donc non perceptible à l’oeil nu. Le spectre des UV est divisé en 3 parties UVA, UVC, UVB. Les UVC sont les plus dangereux mais ils n\'atteignent pas la surface de la terre et sont absorbés par la couche d’ozone. Les UVA sont moins intenses que les UVB, mais ils sont plus présents et peuvent atteindre les couches plus profondes de la peau comme le tissu conjonctif et les vaisseaux sanguins, pouvant entraîner donc un vieillissement prématuré.  \n </string>
    <string name="textdev2_2"> \n Le docteur Bahman Guyuron, chirurgien esthétique, a mené une expérience sur 79 pairs de jumeaux pour tester les causes du tabac sur la peau.L’un des jumeaux fume et l’autre non. Puis un Jury de chirurgiens esthétiques a analysé l’état du vieillissement chez chaque jumeau sans savoir lequel fumait. Il a constaté que les jumeaux fumeurs avaient vieilli prématurément et avaient des rides plus profondes que les jumeaux non fumeur. \n
On constate donc que <b>le tabac </b> est une cause d’un vieillissement accéléré et entraîne le vieillissement cutané (perte d\'élasticité de la peau, changement de texture)
\n </string>
    <string name="textdev2_3"> \n A l’image du tabac, <b>la pollution</b> accélère le vieillissement cutané de la peau et a un impact sur sa barrière de protection. L’ozone (formé de 3 molécules d’oxygène) et les particules fines présentes dans la pollution entraînent une chute des antioxydants naturels de l\'épiderme. Ce qui est une autre cause de l’accélération du vieillissement de la peau.
\n </string>
    <string name="textdev2_4"> \n Lorsque nous sommes <b>stressés</b>, le sang reflue vers les organes vitaux pour leur apporter davantage d’énergie et d’oxygène, et ainsi donner à l’organisme les moyens de réagir rapidement à la situation à laquelle il doit faire face. Puisque la peau n’est pas un organe vital, bien qu’elle soit importante, elle se retrouve moins bien irriguée et « nourrie » par les cellules sanguines. Elle devient alors terne et se régénère moins facilement.  \n\n
Aussi lorsqu’un <b>événement stressant </b>survient, le corps réagit immédiatement. Les glandes surrénales se mettent à produire du cortisol, une hormone qui entraîne la libération de sucres destinés à répondre aux soudains besoins de l’organisme. Mais la production de cortisol sur le long terme provoque aussi des inflammations cutanées qui se manifestent par l’apparition de boutons, de ridules, de rides, et par une peau plus fine et plus terne. Le cortisol provoque aussi la diminution de la quantité de collagène produite par les fibroblastes. La peau perd alors en souplesse et les rides s’installent plus rapidement. Enfin, il faut savoir que le cortisol empêche l’amorçage de la production de mélatonine, l’hormone du sommeil, ce qui réduit considérablement la capacité de la peau à se régénérer.\n
        D’autres part, <b>les radicaux libres</b> sont des molécules instables en excès qui vont s\'équilibrer en obtenant un électron d\'une molécule voisine, c\'est-à-dire en l\'oxydant. Celle-ci devient instable à son tour, se transformant en radical libre.\n
        Cette réaction en continue modifie la structure des molécules et les détériore. C’est ce qui est appelé <b>le stress oxydatif</b>. Ce phénomène accélère le vieillissement de nos cellules qui ne peuvent plus se renouveler aussi vite qu’il le faudrait.\n
Enfin, <b>les radicaux libres</b> agissent également sur la peau, l\'oxydation du collagène serait responsable du relâchement de la peau et des rides.
\n </string>
    <string name="textdev2_5"> \n Si notre alimentation n’est pas saine, manque de fruits rouges ou de légumes, notre organisme n’a pas <b>son apport d’anti-oxydant</b> nécessaire pour combattre les radicaux libres qui détériorent les cellules de la peau. Une mauvaise alimentation entraîne donc le vieillissement de la peau. D’autre part, une suralimentation frappe les mitochondries qui produisent l’énergie de nos cellules. Leur production en du carburant cellulaire va perdre en efficacité et elles vont produire des radicaux libres qui sont au contraire toxiques pour la cellule et ainsi accélérer le vieillissement de la peau.
\n </string>
    <string name="textdev2_6"> \n <b>L’alcool</b> aussi est néfaste pour la peau. Il a un effet de déshydratation général sur le corps et provoque des anomalies au niveau de la circulation sanguine. Ce qui a des répercussions sur la peau : elle devient sèche, terne et ridée, ridules de plus en plus marqués.\n \n\n

</string>
    <string name="textdev2_7"> \n  <b>Notre peau peut donc vieillir plus vite si nous n’avons pas une hygiène de vie saine. C’est à dire en fumant, buvant de l\'alcool et en ne mangeant pas sainement. Mais notre peau peut aussi vieillir plus vite en nous exposant trop au soleil ou en manifestant du stresse. Comment faire alors pour que notre peau soit la plus belle possible le plus longtemps possible ?  </b> \n</string>
    <string name="textexp2_1"> \n Comme nous pouvons voir sur ce schéma, les antioxydants permettraient de protéger la cellule des radicaux libres. Nous voulons alors tester l’effet des antioxydants sur les cellules dans cette expérience.   \n </string>
    <string name="textexp2_2"> \n Tout d’abord, comme lors de la première expérience, nous avons mis notre paillasse en condition stérile grâce à de la javel. Nous avons aussi nettoyer nos mains et nos avant bras avec du savon puis de l’alcool. \n
Ensuite, nous avons préparé une solution mère à base d’eau et d’huile contenant de la vitamine E. Nous avons donc mélangé 10 mL d’eau stérile à 5 mL d’huile. \n </string>
    <string name="textexp2_3"> \n Nous avons ensuite réalisé 4 solutions filles par dilution et une solution témoin avec juste 4 mL d’eau stérile. Nous avons mis 1 mL de solution mère et 3 mL d’eau stérile dans la première solution fille, 2 mL de solution mère et 2 mL d’eau stérile dans la deuxième, 3 mL de solution mère et 1 mL d’eau stérile dans la troisième, et 4 mL de solution mère dans la dernière.\n </string>
    <string name="textexp2_4"> \n Nous avons par la suite incorporé environ la même dose de levure boulangère dans chaque solution fille ainsi que dans la témoin avant d’étaler chaque solution dans des boites à pétrie préalablement préparées avec de la gélose pour levure (avec nutriments). \n
Pour finir nous avons laissé reposer les boites à pétrie une semaine dans une étuve à 38°C.\n </string>
    <string name="textexp2_5"> \n Après une semaine de repos nous n’avons constaté aucun changement entre les boites de test et la boite témoin. Les levures se sont développées de la même façon dans toutes les boites de pétries.\n
Nous connaissons le problème de nos résultats. En faisant une expérience sur les levures nous avons testé l’antioxydant (ici la vitamine E) avec un système réplicatif. Alors que pour observer les effets bénéfiques que produit les antioxydants sur les cellules il faut les tester avec une expérience sur le système métabolique de la cellule, sur des souris par exemple.
\n </string>
</resources>