<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="patapignouf.com.tabs.exp2Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/expe2p1" />

                <TextView
                    android:id="@+id/textViewExp2_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/textexp2_1" />

                <ImageView
                    android:id="@+id/imageView16"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/expe2p2" />

                <TextView
                    android:id="@+id/textViewExp2_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/textexp2_2" />

                <ImageView
                    android:id="@+id/imageView17"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/expe2p3" />

                <TextView
                    android:id="@+id/textViewExp2_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/textexp2_3" />

                <ImageView
                    android:id="@+id/imageView18"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/expe2p4" />

                <TextView
                    android:id="@+id/textViewExp2_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/textexp2_4" />

                <ImageView
                    android:id="@+id/imageView19"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/expe2p5" />

                <TextView
                    android:id="@+id/textViewExp2_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/textexp2_5" />
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
